feat(user): add createUser, removeUser handler
