# server/api/swagger.yaml
@@ -75,28 +75,6 @@ definitions:
     required:
     - usage
     type: object
-  types.JobInfo:
-    properties:
-      cron:
-        type: string
-      entry:
-        type: integer
-      name:
-        type: string
-      next:
-        type: integer
-      prev:
-        type: integer
-    type: object
-  types.JobPageList:
-    properties:
-      list:
-        items:
-          $ref: '#/definitions/types.JobInfo'
-        type: array
-      total:
-        type: integer
-    type: object
   types.Response:
     properties:
       code:
@@ -276,101 +254,6 @@ paths:
       summary: ResetPassword
       tags:
       - auth
-  /job/info:
-    get:
-      consumes:
-      - application/json
-      description: get job info
-      parameters:
-      - in: query
-        name: name
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/types.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/types.JobInfo'
-              type: object
-      summary: Info
-      tags:
-      - job
-  /job/list:
-    get:
-      consumes:
-      - application/json
-      description: list jobs by page
-      parameters:
-      - in: query
-        name: page
-        type: integer
-      - in: query
-        name: search
-        type: string
-      - in: query
-        name: size
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/types.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/types.JobPageList'
-              type: object
-      summary: List
-      tags:
-      - job
-  /job/start:
-    post:
-      consumes:
-      - application/json
-      description: start the job
-      parameters:
-      - in: query
-        name: name
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/types.Response'
-      summary: Start
-      tags:
-      - job
-  /job/stop:
-    post:
-      consumes:
-      - application/json
-      description: stop the job
-      parameters:
-      - in: query
-        name: name
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/types.Response'
-      summary: Stop
-      tags:
-      - job
   /ping:
     get:
       consumes:
